# sstrings

./: .gitignore  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac  sstrings-1.0.3.ebuild  sstrings-1.0.5.ebuild
docs/: Makefile.am  Makefile.in  addchar.3  appendnstring.3  appendstring.3  cutrsstr.3  delsstr.3  emptystring.3  insertrnstring.3  insertstring.3  ltrim.3  replacenstring.3  replacestring.3  sstrings.5  sstrrtrim.3  sstrtrim.3  str2sstr.3  stringappend.3  strrstr.3  subrstr.3  subsstr.3  substr.3
docs/html/: Makefile.am  README  api.html  basics.html  funct_html  index.html  overview.html
docs/html/images/: Makefile.am
docs/html/style/: Makefile.am  code.css  sstrings-styles.css
docs/man/: Makefile.am  ss_string_append.3  ss_string_append_c_string_l.3  ss_string_copy.3  ss_string_copy_c_string.3  ss_string_crop.3  ss_string_crop_c_string.3  ss_string_delete.3  ss_string_enable_gc.3  ss_string_free.3  ss_string_gc_free.3  ss_string_insert.3  ss_string_insert_c_string.3  ss_string_ltrim.3  ss_string_new.3  ss_string_perror.3  ss_string_replace.3  ss_string_replace_c_string.3  ss_string_strcmp.3  ss_string_trim.3  sstrings2.5  strrstr.3
sstrings/: Makefile.am  Makefile.in  ss_gc.c  ss_gc.h  sstrings.c  sstrings.h  sstrings2.c  sstrings2.h  test.c
sstrings/test/: Makefile.am
