man_MANS=sstrings2.5 ss_string_append.3 ss_string_append_c_string.3 ss_string_append_c_string_l.3 ss_string_copy.3 ss_string_copy_c_string.3 ss_string_copy_c_string_l.3 ss_string_crop.3 ss_string_crop_c_string.3 ss_string_crop_c_string_l.3 ss_string_delete.3 ss_string_enable_gc.3 ss_string_free.3 ss_string_gc_free.3 ss_string_insert.3 ss_string_insert_c_string.3 ss_string_insert_c_string_l.3 ss_string_ltrim.3 ss_string_new.3 ss_string_perror.3 ss_string_rcrop_c_string.3 ss_string_rcrop_c_string_l.3 ss_string_replace.3 ss_string_replace_c_string.3 ss_string_replace_c_string_l.3 ss_string_rreplace.3 ss_string_rreplace_c_string.3 ss_string_rreplace_c_string_l.3 ss_string_rtrim.3 ss_string_strcmp.3 ss_string_trim.3 strrstr.3
EXTRA_DIST=$(man_MANS)
